Education - OpenApi - Tests running with both code first + spec first
