# java/openapi/application/src/main/java/education/openapi/application/handlers/BalanceCommandHandler.java
@@ -1,8 +1,8 @@
 package education.openapi.application.handlers;
 
 import education.common.result.Result;
-import education.openapi.api.ApiError;
-import education.openapi.api.components.Balance;
+import education.openapi.application.ApiError;
+import education.openapi.model.Balance;
 
 import java.math.BigDecimal;
 import java.util.Map;
@@ -19,6 +19,6 @@ public class BalanceCommandHandler
     public Result<Balance, ApiError> handle(int accountId)
     {
         BigDecimal amount = balances.getOrDefault(accountId, BigDecimal.ZERO);
-        return Result.success(new Balance(amount.toPlainString()));
+        return Result.success(new Balance().balance(amount.toPlainString()));
     }
 }
