# java/openapi/code-first/src/main/java/education/openapi/api/DepositApi.java
@@ -1,7 +1,8 @@
 package education.openapi.api;
 
-import education.openapi.api.components.Balance;
-import education.openapi.api.components.TransactionRequest;
+import education.openapi.model.Balance;
+import education.openapi.model.ErrorResponse;
+import education.openapi.model.TransactionRequest;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
@@ -42,6 +43,13 @@ public interface DepositApi extends Handler<RoutingContext>
             mediaType = "application/json",
             schema = @Schema(implementation = Balance.class)
         )
+    )
+    @ApiResponse(
+            responseCode = "400",
+            description = "Bad request",
+            content = @Content(
+                    mediaType = "application/json",
+                    schema = @Schema(implementation = ErrorResponse.class))
     )
     @Override
     void handle(RoutingContext event);
