# java/openapi/code-first/src/main/java/education/openapi/api/components/Balance.java
@@ -1,26 +1,0 @@
-package education.openapi.api.components;
-
-import io.swagger.v3.oas.annotations.media.Schema;
-
-@Schema(
-    name = "Balance",
-    description = "Account balance information"
-)
-public class Balance
-{
-    @Schema(
-        description = "The balance amount as a string",
-        example = "100.50"
-    )
-    public String balance;
-
-  public Balance()
-  {
-  }
-
-  public Balance(String balance)
-  {
-    this.balance = balance;
-  }
-}
-
